--- a/0528/manage/package.json
+++ b/0528/manage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "manage",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "vite": "^5.2.0"
   }
 }
